# lab2

./: CMakeLists.txt  main.cpp  menu.cpp  menu.h  myArraySequence.cpp  myArraySequence.h  myDynamicArray.cpp  myDynamicArray.h  myLinkedList.cpp  myLinkedList.h  myListSequence.cpp  myListSequence.h  myPolynomial.cpp  myPolynomial.h  mySequence.cpp  mySequence.h  tests.cpp  tests.h
